@@ -834,6 +834,7 @@
 27) kernel: net: gro: should be ECN friendly.<br>
 28) kernel: net: gro: should aggregate frames without DF.<br>
 29) kernel: ethtool: set addr_assign_type to NET_ADDR_SET when addr is passed on create.<br>
+30) kernel: ethtool: consolidate work with ethtool_ops.<br>
 <br>
 <br>
 <b>TODO:</b><br>
